--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,14 @@ plugins {
 }
 
 version = '1.0.0'
-group = 'example.examplemod'
-archivesBaseName = 'examplemod'
+group = 'pixellabs.minecraftmods'
+archivesBaseName = 'createcomputers'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
-println ("Java: ${System.getProperty('java.version')}, JVM: ${System.getProperty('java.vm.version')} (${System.getProperty('java.vendor')}), Arch: ${System.getProperty('os.arch')}")
 minecraft {
     // Change to your preferred mappings
-    mappings channel: 'official', version: '1.19.2'
+    mappings channel: 'official', version: '1.18.2'
     // Add your AccessTransformer
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -88,13 +87,18 @@ repositories {
         url = 'https://thedarkcolour.github.io/KotlinForForge/'
         content { includeGroup "thedarkcolour" }
     }
+    maven {
+        url "https://squiddev.cc/maven/"
+    }
 }
 
 dependencies {
     // Use the latest version of Minecraft Forge
-    minecraft 'net.minecraftforge:forge:1.19.2-43.2.3'
+    minecraft 'net.minecraftforge:forge:1.18.2-40.2.0'
 
     implementation 'thedarkcolour:kotlinforforge:3.9.1'
+
+    implementation(fg.deobf("org.squiddev:cc-tweaked-1.18.2:${cctVersion}"))
 }
 
 compileKotlin {
