--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -32,3 +32,9 @@ Example mod that uses Kotlin for Forge.
     versionRange = "[1.100.9,)"
     ordering = "NONE"
     side = "BOTH"
+[[dependencies.createcomputers]]
+    modId="create"
+    mandatory=true
+    versionRange="[0.5.0.i,)"
+    ordering="NONE"
+    side="BOTH"
